starting a cube with threejs

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
+    <style>canvas { width: 100%; height: 100% }</style>
   </head>
   <body ng-app="animalApp">
     <!--[if lt IE 7]>
