--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,20 +1,114 @@
 <script>
+    /*
+    Notes from threejs.org example @ http://threejs.org/examples/webgl_animation_skinning_morph.html
+    some CSS...
+    some vars like camera, scene, renderer, mesh, helper, clock...then
+    init();
+    animate();
+    var init = function() { 
+        camera = bleh;
+        scene = bleh
+        scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
+        scene.add(camera);
+        ground code, like geometry and material initializations
+        var ground = new THREE.Mesh( geometry, material );
+        ground.position.set( 0, FLOOR, 0 );
+        ground.rotation.x = -Math.PI/2;
+        scene.add( ground );
+        ground.receiveShadow = true;
+        lights code, like var ambient = new THREE.AmbientLight( 0x222222 );
+        scene.add( ambient );
+        renderer code, like renderer = new THREE.WebGLRenderer( { antialias: true } );
+        container.appendChild( renderer.domElement );
+        stats code, like new Stats();
+        JSONLoader, then, in callback we have createScene( geometry, materials, 0, FLOOR, -300, 60 )
+    }
+
+    var createScene = function createScene( geometry, materials, x, y, z, s ) {
+        skinning = true for every material;
+        mesh = new THREE.SkinnedMesh( geometry, new THREE.MeshFaceMaterial( materials ) );
+        scence.add(mesh);
+        var animation = new THREE.Animation( mesh, geometry.animation );
+        animation.play();
+    }
+
+    function animate() {
+        requestAnimationFrame( animate );
+        render();
+        stats.update();
+    }
+
+    function render() {
+          var delta = 0.75 * clock.getDelta();
+
+          camera.position.x += ( mouseX - camera.position.x ) * .05;
+          camera.position.y = THREE.Math.clamp( camera.position.y + ( - mouseY - camera.position.y ) * .05, 0, 1000 );
+
+          camera.lookAt( scene.position );
+
+          // update skinning
+
+          THREE.AnimationHandler.update( delta );
+
+          if ( helper !== undefined ) helper.update();
+
+          // update morphs
+
+          if ( mesh ) {
+              var time = Date.now() * 0.001;
+          }
+
+          renderer.render( scene, camera );
+      }
+
+    */
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-
     var renderer = new THREE.WebGLRenderer();
     renderer.setSize( window.innerWidth, window.innerHeight );
+    // container instead of this below
     document.body.appendChild( renderer.domElement );
+    //var geometry = new THREE.BoxGeometry(1,1,1);
+    //var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+    //var cube = new THREE.Mesh( geometry, material );
+    //scene.add( cube );
+    camera.position.z = 5;
+    // this whole chunk is a render loop...whatever that means
+    // This will create a loop that causes the renderer to draw the scene 60 times per second
 
-    var geometry = new THREE.BoxGeometry(1,1,1);
-var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
-var cube = new THREE.Mesh( geometry, material );
-scene.add( cube );
+    var clock = new THREE.Clock();
+    function render() {
+        var delta = clock.getDelta();
+        if (animmesh) {
+            THREE.AnimationHandler.update(delta);
+        }
+    }
 
-camera.position.z = 5;
-function render() {
-    requestAnimationFrame(render);
-    renderer.render(scene, camera);
-}
-render();
+    //function render() {
+     //   requestAnimationFrame(render);
+      //  cube.rotation.x += 0.1;
+      //  cube.rotation.y += 0.1;
+      //  renderer.render(scene, camera);
+    //}
+    //render();
+    function loadModel() {
+        var loader = new THREE.JSONLoader();
+        loader.load("../../assets/model-threejs.json",
+            function(model, loadedMaterial) {
+                loadedMaterial[0].skinning = true;
+                console.log('hiiii model: ');
+                console.log(model);
+                console.log('hiiii loaded material: ');
+                console.log(loadedMaterial);
+                THREE.AnimationHandler.add(model.animation);
+                // ** note ** this was without the var...
+                var animmesh = new THREE.SkinnedMesh(model, loadedMaterial[0]);
+                animmesh.translateY(-2);
+                var animation = new THREE.Animation(animmesh, "animation");
+                animation.play();
+                scene.add(animmesh);
+                render();
+        });
+    }
+    loadModel();
 </script>
