--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,18 +7,18 @@
     var clock = new THREE.Clock();
 
     function init() { 
-        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-        camera.position.z = 5;
+        camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 1000 );
+        camera.position.set(0,100,0);
         scene = new THREE.Scene();
-        scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
+        //scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
         scene.add(camera);
         //var ground = new THREE.Mesh( geometry, material );
         //ground.position.set( 0, FLOOR, 0 );
         //ground.rotation.x = -Math.PI/2;
         //scene.add( ground );
         //ground.receiveShadow = true;
-        var ambient = new THREE.AmbientLight( 0x222222 );
-        scene.add( ambient );
+        //var ambient = new THREE.AmbientLight( 0x222222 );
+        //scene.add( ambient );
 
         renderer = new THREE.WebGLRenderer( { antialias: true } );
         renderer.setSize( window.innerWidth, window.innerHeight );
@@ -58,7 +58,7 @@
 
         //camera.position.x += ( mouseX - camera.position.x ) * .05;
         //camera.position.y = THREE.Math.clamp( camera.position.y + ( - mouseY - camera.position.y ) * .05, 0, 1000 );
-        //camera.lookAt(scene.position);
+        camera.lookAt(scene.position);
 
         if (animmesh) {
             THREE.AnimationHandler.update(delta);
