--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,7 +8,7 @@
 
     function init() { 
         camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 1000 );
-        camera.position.set(0,100,0);
+        camera.position.x = -900;
         scene = new THREE.Scene();
         //scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
         scene.add(camera);
@@ -21,7 +21,7 @@
         //scene.add( ambient );
 
         renderer = new THREE.WebGLRenderer( { antialias: true } );
-        renderer.setSize( window.innerWidth, window.innerHeight );
+        renderer.setSize( window.innerWidth * .9 , window.innerHeight * .9);
         document.body.appendChild( renderer.domElement );
         //container.appendChild( renderer.domElement );
         //stats code, like new Stats();
@@ -42,7 +42,6 @@
         //skinning = true for every material;
         material[0].skinning = true;
         animmesh = new THREE.SkinnedMesh(model, material[0]);
-        //animmesh.translateY(-2);
         scene.add(animmesh);
         var animation = new THREE.Animation(animmesh, model.animation);
         animation.play();
@@ -56,9 +55,7 @@
     function render() {
         var delta = 0.75 * clock.getDelta();
 
-        //camera.position.x += ( mouseX - camera.position.x ) * .05;
-        //camera.position.y = THREE.Math.clamp( camera.position.y + ( - mouseY - camera.position.y ) * .05, 0, 1000 );
-        camera.lookAt(scene.position);
+        camera.lookAt(new THREE.Vector3(0,0,0));
 
         if (animmesh) {
             THREE.AnimationHandler.update(delta);
