--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,7 +7,8 @@
     var clock = new THREE.Clock();
 
     function init() { 
-        camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 1000 );
+        // field of view, aspect ratio, near plane, far plane
+        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, .1, 10000 );
         camera.position.x = -900;
         scene = new THREE.Scene();
         //scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
@@ -21,7 +22,7 @@
         //scene.add( ambient );
 
         renderer = new THREE.WebGLRenderer( { antialias: true } );
-        renderer.setSize( window.innerWidth * .9 , window.innerHeight * .9);
+        renderer.setSize( window.innerWidth, window.innerHeight);
         document.body.appendChild( renderer.domElement );
         //container.appendChild( renderer.domElement );
         //stats code, like new Stats();
@@ -40,8 +41,9 @@
 
     function createScene(model, material) {
         //skinning = true for every material;
-        material[0].skinning = true;
-        animmesh = new THREE.SkinnedMesh(model, material[0]);
+        //material[0].skinning = true;
+        //animmesh = new THREE.SkinnedMesh(model, material[0]);
+        animmesh = new THREE.Mesh(model, new THREE.MeshNormalMaterial());
         scene.add(animmesh);
         var animation = new THREE.Animation(animmesh, model.animation);
         animation.play();
@@ -55,13 +57,13 @@
     function render() {
         var delta = 0.75 * clock.getDelta();
 
-        camera.lookAt(new THREE.Vector3(0,0,0));
 
         if (animmesh) {
             THREE.AnimationHandler.update(delta);
         }
 
         renderer.render(scene, camera);
+        camera.lookAt(new THREE.Vector3(0,-80,100));
     }
 
     init();
