--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,8 @@
       <!-- endbower -->
     <!-- endbuild -->
       <script src="assets/lib/three.js"></script>
+      <script src="assets/lib/BinaryTextureLoader.js"></script>
+      <script src="assets/lib/TGALoader.js"></script>
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
