--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <!--<script src="bower_components/three.min/index.js"></script>-->
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/threex.cubecamera/threex.cubecamera.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
       <script src="assets/lib/three.js"></script>
