--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,56 +8,42 @@
     var clock = new THREE.Clock();
 
     function init() { 
-        // field of view, aspect ratio, near plane, far plane
+        // args for constructor are field of view, aspect ratio, near plane, far plane
         camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, .1, 10000 );
-        //camera.position.x = -900;
-        camera.position.set(781, 374,242);
+        camera.position.set(-568, 694,48);
         camera.up.set( -1,0 ,1);
         controls = new THREE.OrbitControls( camera );
-        console.log('whoooa camera');
-        console.log(camera);
         scene = new THREE.Scene();
-        //var white = "#ffffff";
-        //scene.fog = new THREE.Fog(white, .1, 10000 );
+        scene.add(camera);
 
         // FLOOR
         var floorTexture = new THREE.ImageUtils.loadTexture('../../assets/checkerboard.jpg' );
         floorTexture.wrapS = floorTexture.wrapT = THREE.RepeatWrapping; 
-        floorTexture.repeat.set( 15, 15 );
+        floorTexture.repeat.set(10, 10 );
         var floorMaterial = new THREE.MeshBasicMaterial( { map: floorTexture, side:THREE.BackSide } );
         var floorGeometry = new THREE.PlaneGeometry(1000, 1000, 10, 10);
         var floor = new THREE.Mesh(floorGeometry, floorMaterial);
         floor.position.z = 20; 
-        floor.rotation.x = Math.PI;
+        floor.rotation.x = Math.PI; // 180 degrees
         scene.add(floor);
 
-
         // mirror code
-        var boxGeom = new THREE.BoxGeometry(150, 100, 500, 1, 1, 1);
-        mirrorCubeCamera = new THREE.CubeCamera(0.1, 10000, 512);
-        mirrorCubeCamera.position.x = -900;
+        var boxGeom = new THREE.BoxGeometry(300, 10, 300, 1, 1, 1);
+        mirrorCubeCamera = new THREE.CubeCamera(0.1, 10000, 500);
         scene.add(mirrorCubeCamera);
+
         var mirrorCubeMaterial = new THREE.MeshBasicMaterial( { envMap: mirrorCubeCamera.renderTarget } );
         mirrorCube = new THREE.Mesh(boxGeom, mirrorCubeMaterial);
-        mirrorCube.position.set(0,0,200);
-        mirrorCubeCamera.position = mirrorCube.position;
+        mirrorCube.position.set(100,-450,200);
+        //mirrorCube.rotation.z = Math.PI / 2;
+        mirrorCubeCamera.position = (-200,500,-200);
         scene.add(mirrorCube);
 
-
-        scene.add(camera);
-        //var ground = new THREE.Mesh( geometry, material );
-        //ground.position.set( 0, FLOOR, 0 );
-        //ground.rotation.x = -Math.PI/2;
-        //scene.add( ground );
-        //ground.receiveShadow = true;
-        //var ambient = new THREE.AmbientLight( 0x222222 );
-        //scene.add( ambient );
 
         renderer = new THREE.WebGLRenderer();
         renderer.setSize( window.innerWidth * .9, window.innerHeight * .9);
         document.body.appendChild( renderer.domElement );
         //container.appendChild( renderer.domElement );
-        //stats code, like new Stats();
 
         var loader = new THREE.JSONLoader();
 
@@ -73,7 +59,7 @@
 
     function createScene(model, material) {
         //skinning = true for every material;
-        material[0].skinning = true;
+        //material[0].skinning = true;
 
         var tgaLoader = new THREE.TGALoader();
         console.log('hii tgaLoader' + tgaLoader);
@@ -81,10 +67,7 @@
         tgaLoader.load("../../assets/ELEPHANT_DIFF_SPEC.tga", function(texture) {
             var hexColor = "#848081";
             animmesh = new THREE.SkinnedMesh(model, new THREE.MeshBasicMaterial({color: hexColor, skinning: true, map: texture}));
-            animmesh.position.set(0,500,0);
-            //animmesh = new THREE.Mesh(model, new THREE.MeshNormalMaterial());
-            console.log('heeeey');
-            console.log(animmesh);
+            animmesh.position.set(0,610,0);
             scene.add(animmesh);
             var animation = new THREE.Animation(animmesh, model.animation);
             animation.play();
@@ -107,8 +90,11 @@
         var delta = 10 * clock.getDelta();
         //console.log(clock.getDelta());
         //console.log(delta);
+        //console.log('camera.position');
+        //console.log(camera.position);
 
 
+       
         if (animmesh) {
             THREE.AnimationHandler.update(delta);
         }
